# test-dep-ci-v1

./: pyproject.toml
.github/: entrypoint.sh
.github/workflows/: ci.yml
test_dep_ci_v1/: main.py
