[tool.poetry]
name = "test-dep-ci-v1"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
packages = [{include = "test_dep_ci_v1"}]

[tool.poetry.dependencies]
python = "^3.11"
django = "^4.2.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
